turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:20: error: not found: value l
else{setCouleurBrosse(colors(l+1))}
                             ^