turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
var c:Color=getCouleurSol()
var n:Int=0


 


for (i <- 0 to colors.length-1){
	
	if(c==colors(i)){return n}
	else{n=n+1}
	return n	
}



if(n==colors.length-1){setCouleurBrosse(colors(0))}
else{setCouleurBrosse(colors(l+1))}

baisseBrosse();
leveBrosse()    

if(n==rule.length-1){ if(rule(0)=='R'){
	droite;avance
}
else{gauche;avance}
}

else{
	if(rule(n)=='R'){droite;avance
	}
	else{gauche;avance}
}	

}
